# wazo-sysconfd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt  setup.py  sysconfd.conf  tox.ini  zuul.yaml
contribs/docker/: README.md
debian/: changelog  control  copyright  init  postinst  rules  wazo-sysconfd.dirs  wazo-sysconfd.install  wazo-sysconfd.links  wazo-sysconfd.lintian-overrides  wazo-sysconfd.maintscript  wazo-sysconfd.postinst  wazo-sysconfd.service  xivo-sysconfd.dirs  xivo-sysconfd.init  xivo-sysconfd.lintian-overrides  xivo-sysconfd.logrotate  xivo-sysconfd.maintscript  xivo-sysconfd.service
etc/: socket.conf
etc/rsyslog.d/: 99-wazo-sysconfd.conf
etc/wazo-sysconfd/: config.yml
etc/xivo/: sysconfd.conf
integration_tests/: Makefile  test-requirements.txt
integration_tests/assets/: docker-compose.base.override.yml  docker-compose.yml
integration_tests/docker/: Dockerfile-sysconfd-test
integration_tests/suite/: test_api.py  test_dhcpd_update.py
templates/resolvconf/: hosts  resolv.conf
unittest/: sysconfd_client.py  test.py  test01_openssl.py  test03_dahdi.py  test05_asterisk.py
wazo_sysconf/modules/: request_handlers.py  xivoctl.py
wazo_sysconf/request_handlers/: agentd.py  chown_autoprov_config.py  command.py  request.py
wazo_sysconfd/: __init__.py  bus.py  config.py  controller.py  dns_lock.py  exceptions.py  helpers.py  http_server.py  main.py  settings.py  utilities.py
wazo_sysconfd/modules/: __init__.py  asterisk.py  commonconf.py  dhcpd_update.py  ha.py  request_handlers.py  resolvconf.py  services.py  xivoctl.py
wazo_sysconfd/plugin_helpers/: exceptions.py
wazo_sysconfd/request_handlers/: agentd.py  asterisk.py  chown_autoprov_config.py  command.py  request.py
xivo-sysconfd/: Makefile.pkg  setup.py  sysconfd.conf
xivo-sysconfd/debian/: changelog  copyright  init  install  maintscript
xivo-sysconfd/unittest/: test01_openssl.py
xivo-sysconfd/xivo_sysconf/: main.py
xivo_sysconf/: __init__.py  helpers.py  jsoncore.py  main.py
xivo_sysconf/modules/: __init__.py  agentbus_handler.py  asterisk.py  commonconf.py  dahdi.py  dhcp.py  dhcpd_update.py  dnetintf.py  ha.py  lshw.py  munin.py  wizard.py  (+10 more)
(+129 files in other folders)
